css/style.css
body {
    margin: 0;
    padding: 0;
    background-color: rgb(245, 219, 219);
    font-family: 'DOCK11';
    font-weight: Heavy;
}

@font-face {
    font-family: 'DOCK11';
    src: url('fonts/heavydock11.eot');
    src: url('fonts/heavydock11.eot?#iefix') format('embedded-opentype'),
        url('fonts/heavydock11.woff2') format('woff2'),
        url('fonts/heavydock11.woff') format('woff'),
        url('fonts/heavydock11.ttf')  format('truetype'),
        url('fonts/heavydock11.svg#DOCK11') format('svg');
}

.main-box {
    margin-top: 50px;
    height: 70vh;
    width: 90%;
    background-image: url(../img/board.JPG);
    background-size: contain;
    background-repeat: no-repeat;
}

.box-flap {
    transition-property: transform;
    height: 50%;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    color:black;
}

.box-flap-1 {
    background-image: url(../img/cover-xs-top.png);
    border-bottom: 1px;
    border-bottom-style: solid;
}

.box-flap-2 {
    background-image: url(../img/cover-xs-bottom.png);
    border-top: 1px;
    border-top-style: solid;
}

.box-flap-1:hover {
    transform: rotateX(45deg);
    transform-origin: center top;
    transition-duration: 2s;
}

.box-flap-2:hover {
    transform: rotateX(45deg);
    transform-origin: center bottom;
    transition-duration: 2s;
}

.row-1 {
    height: 100%;
    width: 100%;   
}

.p-1 {
    background-color: rgb(130, 127, 118, 0.5);
    box-shadow: 1px 1px 1px 1px black inset;
    color: rgb(130, 127, 118, 0.5);
    text-shadow: 0px 1px 0px rgb(0, 0, 0);
} 

.music-links {
    display:none;
}

@media (min-width: 576px) {


    .main-box {
        margin-top: 50px;
        height: 90vh;
        width: 50%;
    }

    .music-links {
        display: block;
        position: absolute;
        top:100px;
        left: 50px;
        cursor: pointer;
    }

    .with-music, .without-music {
        color:rgb(0, 0, 0);
        text-decoration: none;
    }

    .with-music:hover, .without-music:hover{
        color: rgb(193, 5, 5);
    }

    .box-flap-1 {
        background-image: url(../img/jumanji-top-cover.png);
        border-bottom: 1px;
        border-bottom-style: solid;
    }
    
    .box-flap-2 {
        background-image: url(../img/jumanji-bottom-cover2.png);
        border-top: 1px;
        border-top-style: solid;
    }


}

